@@ -29,6 +29,7 @@ Do not forget to update this page on the wiki when making changes relevant to de
 http://docs.joomla.org/index.php?title=Version_1.6_Developer_Notes
 
 25-Jan-2009 Rob Schley
+ ^ Cleaned up the site and administrator index.php files.
  - Removed Foood icons from the administrator and site.
  - Removed images/stories, images/smilies, and images/M_images and other old images.
 
